<!--
  ~ Copyright 2015 Jesús Adolfo García Pasquel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="textview_title">My Nanodegree Apps!</string>
    <string name="button_spotify_app">Spotify Streamer</string>
    <string name="button_scores_app">Scores App</string>
    <string name="button_library_app">Library App</string>
    <string name="button_build_it_bigger_app">Build It Bigger</string>
    <string name="button_xyz_reader_app">XYZ Reader</string>
    <string name="button_capstone_app">Capstone: My Own App</string>
    <string name="item_about_author">About the author</string>
    <string name="toast_about_author">More information coming soon!</string>
    <string name="toast_spotify_app">This button will launch my Spotify Streamer app!</string>
    <string name="toast_scores_app">This button will launch my Scores app!</string>
    <string name="toast_library_app">This button will launch my Library app!</string>
    <string name="toast_build_it_bigger_app">This button will launch my Build It Bigger app!</string>
    <string name="toast_xyz_reader_app">This button will launch my XYZ Reader app!</string>
    <string name="toast_capstone_app">This button will launch my capstone app!</string>
</resources>
