<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#deeaf1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity">

    <TextView
        android:gravity="center"
        style="@android:style/TextAppearance.Large"
        android:layout_weight="1"
        android:text="@string/textview_title" android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_spotify_app"
        android:text="@string/button_spotify_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_scores_app"
        android:text="@string/button_scores_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_library_app"
        android:text="@string/button_library_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_build_it_app"
        android:text="@string/button_build_it_bigger_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_xyz_reader_app"
        android:text="@string/button_xyz_reader_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_capstone_app"
        android:text="@string/button_capstone_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        style="@android:style/TextAppearance.Large"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
